# data.warehouse

./: CMakeLists.txt  README.md  alpha.vantage.txt  build.cmake.sh  schema.sql
data/: companies.csv  financials.csv  stock_data.csv  tickers.csv
src/: csv.cc  csv.hh  etl.cc  fetch.cc  odbc.cc  odbc.hh  ssl_read.cc  ssl_read.hh  stock.cc  stock.hh  web.cc  web.hh
